--- a/2_NLP/v0_0302.ipynb
+++ b/2_NLP/v0_0302.ipynb
@@ -43,7 +43,6 @@
     "                 r'/home/jupyter/Arsenal/20220522',\n",
     "                 path + '/Function']\n",
     "\n",
-    "\n",
     "for i in path_codebase:    \n",
     "    if i not in sys.path:\n",
     "        sys.path = [i] + sys.path\n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -121,33 +120,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_type(df):\n",
+    "# def filter_type(df):\n",
+    "#     '''\n",
+    "#     Keep rows with one type only\n",
+    "#     '''\n",
+    "    \n",
+    "#     loc_df = df.copy()\n",
+    "#     type_name = ['淡香水', '香水', '淡香精', '香精', '古龍']\n",
+    "#     type_li = ['type_' + str(i) for i in range(len(type_name))]\n",
+    "    \n",
+    "#     for i in range(len(type_name)):\n",
+    "#         loc_df[type_li[i]] = np.where(loc_df['title'].str.contains(type_name[i]), 1, 0)\n",
+    "\n",
+    "#     loc_df = loc_df.melt(id_vars='index', var_name='type', value_vars=type_li)\n",
+    "#     loc_df = loc_df[loc_df['value']==1]\n",
+    "#     loc_df = cbyz.df_add_size(df=loc_df, group_by=['index'], col_name='count')\n",
+    "#     loc_df = loc_df[loc_df['count']==1]\n",
+    "\n",
+    "#     loc_df = loc_df[['index', 'type']]\n",
+    "    \n",
+    "#     cond = []\n",
+    "#     for i in range(len(type_li)):\n",
+    "#         cond.append(loc_df['type']==type_li[i])\n",
+    "        \n",
+    "#     loc_df['type'] = np.select(cond, type_name)\n",
+    "#     result = df.merge(loc_df, how='left', on='index')\n",
+    "#     return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_type(df, values):\n",
     "    '''\n",
     "    Keep rows with one type only\n",
-    "    \n",
     "    '''\n",
     "    \n",
+    "    assert isinstance(values, list), 'Error'\n",
     "    loc_df = df.copy()\n",
-    "    loc_df['type_1'] = np.where(loc_df['title'].str.contains('香水'), 1, 0)\n",
-    "    loc_df['type_2'] = np.where(loc_df['title'].str.contains('香精'), 1, 0)\n",
-    "    loc_df['type_3'] = np.where(loc_df['title'].str.contains('古龍'), 1, 0)\n",
-    "\n",
-    "    loc_df = loc_df.melt(id_vars='index', value_vars=['type_1', 'type_2', 'type_3'])\n",
-    "\n",
-    "    loc_df = loc_df \\\n",
-    "            .groupby('index') \\\n",
-    "            .agg({'value':'sum'}) \\\n",
-    "            .reset_index()\n",
-    "\n",
-    "    loc_df = loc_df[loc_df['value']==1]\n",
-    "    loc_df = loc_df[['index']]\n",
-    "    result = df.merge(loc_df, how='left', on='index')\n",
+    "    type_li = ['type_' + str(i) for i in range(len(values))]\n",
     "    \n",
+    "    for i in range(len(values)):\n",
+    "        loc_df[type_li[i]] = np.where(loc_df['title'].str.contains(values[i]), 1, 0)\n",
+    "\n",
+    "    loc_df = loc_df.melt(id_vars='index', var_name='type', value_vars=type_li)\n",
+    "    loc_df = loc_df[loc_df['value']==1]\n",
+    "    loc_df = cbyz.df_add_size(df=loc_df, group_by=['index'], col_name='count')\n",
+    "    loc_df = loc_df[loc_df['count']==1]\n",
+    "    loc_df = loc_df[['index', 'type']]\n",
+    "    \n",
+    "    cond = []\n",
+    "    for i in range(len(type_li)):\n",
+    "        cond.append(loc_df['type']==type_li[i])\n",
+    "        \n",
+    "    loc_df['type'] = np.select(cond, values)\n",
+    "    result = df.merge(loc_df, how='left', on='index')\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def filter_gender(df):\n",
+    "#     '''\n",
+    "#     Keep rows with one type only\n",
+    "#     '''\n",
+    "    \n",
+    "#     loc_df = df.copy()\n",
+    "#     loc_df['type_1'] = np.where(loc_df['title'].str.contains('男'), 1, 0)\n",
+    "#     loc_df['type_2'] = np.where(loc_df['title'].str.contains('女'), 1, 0)\n",
+    "#     loc_df['type_3'] = np.where(loc_df['title'].str.contains('中性'), 1, 0)\n",
+    "\n",
+    "#     loc_df = loc_df.melt(id_vars='index', var_name='gender',\n",
+    "#                          value_vars=['type_1', 'type_2', 'type_3'])\n",
+    "    \n",
+    "#     loc_df = loc_df[loc_df['value']==1]\n",
+    "#     loc_df = cbyz.df_add_size(df=loc_df, group_by=['index'], col_name='count')\n",
+    "#     loc_df = loc_df[loc_df['count']==1]\n",
+    "\n",
+    "#     loc_df = loc_df[['index', 'gender']]\n",
+    "#     result = df.merge(loc_df, how='left', on='index')\n",
+    "    \n",
+    "#     return result"
    ]
   },
   {
@@ -159,9 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -177,6 +241,9 @@
     "\n",
     "# Use to merge original data\n",
     "data_raw['title_orig'] = data_raw['title']\n",
+    "\n",
+    "if 'index' not in data_raw.columns:\n",
+    "    data_raw['index'] = data_raw.index\n",
     "\n",
     "data = data_raw.copy()\n",
     "\n",
@@ -195,14 +262,35 @@
     "data = data.dropna(subset=['title'], axis=0)\n",
     "data['title'] = data['title'].str.replace('找相似', '')\n",
     "\n",
-    "data = filter_type(data)\n",
+    "data = filter_type(data, values=['淡香水', '香水', '淡香精', '香精', '古龍'])\n",
+    "# data = filter_gender(data)\n",
     "\n",
     "print('Bug - title裡面還是有括號')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['香水', nan, '古龍', '香精'], dtype=object)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +569,7 @@
        "[763 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +713,7 @@
        "[41386 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,29 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(36, 36)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(word_sentence_train), len(y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,13 +736,12 @@
     "    assert len(word_sentence) == len(pos_sentence)\n",
     "    for word, pos in zip(word_sentence, pos_sentence):\n",
     "        print(f\"{word}({pos})\", end=\"\\u3000\")\n",
-    "    print()\n",
     "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,78 +923,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['feature.minfreq',\n",
-       " 'feature.possible_states',\n",
-       " 'feature.possible_transitions',\n",
-       " 'c1',\n",
-       " 'c2',\n",
-       " 'max_iterations',\n",
-       " 'num_memories',\n",
-       " 'epsilon',\n",
-       " 'period',\n",
-       " 'delta',\n",
-       " 'linesearch',\n",
-       " 'max_linesearch']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'num': 27,\n",
-       " 'scores': {},\n",
-       " 'loss': 34.151758,\n",
-       " 'feature_norm': 3.739187,\n",
-       " 'error_norm': 0.00421,\n",
-       " 'active_features': 1443,\n",
-       " 'linesearch_trials': 1,\n",
-       " 'linesearch_step': 1.0,\n",
-       " 'time': 0.001}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.logparser.last_iteration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27 {'num': 27, 'scores': {}, 'loss': 34.151758, 'feature_norm': 3.739187, 'error_norm': 0.00421, 'active_features': 1443, 'linesearch_trials': 1, 'linesearch_step': 1.0, 'time': 0.001}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(trainer.logparser.iterations), trainer.logparser.iterations[-1])"
    ]
@@ -945,22 +961,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<contextlib.closing at 0x7f61527ef5d0>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tagger = pycrfsuite.Tagger()\n",
     "tagger.open(path_export + '/ckip_tagger_model.crfsuite')"
@@ -975,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -990,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,27 +1005,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      1.00      0.99       174\n",
-      "           1       1.00      0.75      0.86         8\n",
-      "\n",
-      "    accuracy                           0.99       182\n",
-      "   macro avg       0.99      0.88      0.93       182\n",
-      "weighted avg       0.99      0.99      0.99       182\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(classification_report(y_pred=y_test_pred, y_true=y_test))\n",
     "# print(classification_report(y_pred=y_pred, y_true=y_test, labels=new_classes))"
@@ -1035,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,24 +1050,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "update_file = pred_raw[['title_orig']]\n",
     "update_file['sentence'] = pred_raw.index\n",
@@ -1089,20 +1065,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:10: FutureWarning: As the xlwt package is no longer maintained, the xlwt engine will be removed in a future version of pandas. This is the only engine in pandas that supports writing in the xls format. Install openpyxl and write to an xlsx file instead. You can set the option io.excel.xls.writer to 'xlwt' to silence this warning. While this option is deprecated and will also raise a warning, it can be globally set and the warning suppressed.\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if y_pred_col in data_raw.columns:\n",
     "    data_raw = data_raw.drop(y_pred_col, axis=1)\n",
